# ferrodruid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/CLA/: corporate-cla.md  individual-cla.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: public-ci.yml
bins/ferrodruid/: Cargo.toml
bins/ferrodruid-broker/: Cargo.toml
bins/ferrodruid-cli/: Cargo.toml
bins/ferrodruid-cli/src/: main.rs
bins/ferrodruid-coordinator/: Cargo.toml
bins/ferrodruid-coordinator/src/: coordinator_app.rs  main.rs
bins/ferrodruid-historical/: Cargo.toml
bins/ferrodruid-historical/src/: main.rs
bins/ferrodruid-middlemanager/: Cargo.toml
bins/ferrodruid-middlemanager/src/: main.rs
bins/ferrodruid-migrate/: Cargo.toml
bins/ferrodruid-migrate/src/: assess.rs  attach.rs  gen_certs.rs  import_druid.rs  main.rs  s3_source.rs
bins/ferrodruid-migrate/tests/: assess.rs  attach.rs  import_druid.rs  s3_source.rs
bins/ferrodruid-overlord/: Cargo.toml
bins/ferrodruid-overlord/src/: main.rs  overlord_app.rs
bins/ferrodruid-router/: Cargo.toml
bins/ferrodruid/src/: main.rs
crates/ferrodruid-aggregator/: Cargo.toml
crates/ferrodruid-aggregator/src/: bloom.rs  cardinality.rs  count.rs  filtered.rs  first_last.rs  grouping.rs  lib.rs  minmax.rs  post_agg.rs  postagg_expr.rs  sketch.rs  string_agg.rs  sum.rs  variance.rs
crates/ferrodruid-aggregator/tests/: legacy_null_empty_aggs.rs
crates/ferrodruid-auth/: Cargo.toml
crates/ferrodruid-auth/src/: lib.rs
crates/ferrodruid-authz/: Cargo.toml
crates/ferrodruid-authz/src/: lib.rs
crates/ferrodruid-bitmap/: Cargo.toml
crates/ferrodruid-bitmap/src/: lib.rs
crates/ferrodruid-broker/: Cargo.toml
crates/ferrodruid-broker/src/: lib.rs
crates/ferrodruid-broker/tests/: topn_sketch_multiseg.rs
crates/ferrodruid-cli-lib/: Cargo.toml
crates/ferrodruid-cli-lib/src/: lib.rs
crates/ferrodruid-cluster/: Cargo.toml
crates/ferrodruid-cluster/src/: auth.rs  lib.rs  persist.rs  replication.rs  tls.rs  transport.rs
crates/ferrodruid-cluster/tests/: binary_three_process.rs  binary_three_process_mtls.rs  chunked_snapshot_transfer.rs  cluster_replication_soak.rs  jepsen_scaffold.rs  mtls_replication_e2e.rs  persistent_log_crash_recovery.rs  three_node_tcp.rs  three_node_test.rs  tls_three_node.rs
crates/ferrodruid-common/: Cargo.toml
crates/ferrodruid-common/src/: config.rs  error.rs  lib.rs  memory.rs  null_mode.rs  tpch.rs  types.rs
crates/ferrodruid-common/tests/: legacy_null_latch.rs
crates/ferrodruid-compat-check/: Cargo.toml  README.md
crates/ferrodruid-compat-check/src/: catalog.rs  lib.rs  main.rs  probe.rs  report.rs  runner.rs
crates/ferrodruid-compression/: Cargo.toml
crates/ferrodruid-compression/src/: lib.rs
crates/ferrodruid-coordinator/: Cargo.toml
crates/ferrodruid-coordinator/src/: balancer.rs  lib.rs  rules.rs  server.rs  tests.rs
crates/ferrodruid-deep-storage/: Cargo.toml
crates/ferrodruid-deep-storage/src/: lib.rs  segment_artifact.rs
crates/ferrodruid-deep-storage/tests/: s3_compat_aws.rs  s3_compat_minio.rs  s3_compat_r2.rs  s3_compat_wiremock.rs  s3_druid_segment_read.rs
crates/ferrodruid-deep-storage/tests/common/: mod.rs
crates/ferrodruid-dict/: Cargo.toml
crates/ferrodruid-dict/src/: lib.rs
crates/ferrodruid-discovery/: Cargo.toml
crates/ferrodruid-discovery/src/: lib.rs
crates/ferrodruid-events/: Cargo.toml
crates/ferrodruid-events/src/: lib.rs
crates/ferrodruid-historical/: Cargo.toml
crates/ferrodruid-historical/src/: lib.rs
crates/ferrodruid-import-export/: Cargo.toml
crates/ferrodruid-import-export/src/: lib.rs
crates/ferrodruid-ingest-batch/: Cargo.toml
crates/ferrodruid-ingest-batch/examples/: ingest_bench.rs
crates/ferrodruid-ingest-batch/src/: avro_format.rs  lib.rs  parquet_format.rs
crates/ferrodruid-ingest-batch/tests/: legacy_null_ingest_coercion.rs  null_faithful.rs
crates/ferrodruid-ingest-deltalake/: Cargo.toml
crates/ferrodruid-ingest-deltalake/src/: lib.rs
crates/ferrodruid-ingest-iceberg/: Cargo.toml
crates/ferrodruid-ingest-iceberg/src/: lib.rs
crates/ferrodruid-ingest-kafka/: Cargo.toml
crates/ferrodruid-ingest-kafka/src/: checkpoint.rs  consumer.rs  eos_writer.rs  index_task.rs  lib.rs  partitions.rs  runtime.rs  source.rs  streaming.rs  supervisor.rs  topic_id.rs
crates/ferrodruid-ingest-kafka/tests/: kafka_e2e.rs  kafka_eos_real.rs
crates/ferrodruid-ingest-kinesis/: Cargo.toml
crates/ferrodruid-ingest-kinesis/src/: aws.rs  decode.rs  frontier.rs  lib.rs  mock.rs  source.rs
crates/ferrodruid-loadrules/: Cargo.toml
crates/ferrodruid-logcompat/: Cargo.toml  README.md
crates/ferrodruid-lookup/: Cargo.toml
crates/ferrodruid-marketplace/: Cargo.toml
crates/ferrodruid-metadata/: Cargo.toml
crates/ferrodruid-metadata-schema/: Cargo.toml
crates/ferrodruid-middlemanager/: Cargo.toml
crates/ferrodruid-msq/: Cargo.toml
crates/ferrodruid-overlord/: Cargo.toml
crates/ferrodruid-plugin-rt/: Cargo.toml
crates/ferrodruid-query/: Cargo.toml
crates/ferrodruid-rest/: Cargo.toml
crates/ferrodruid-role/: Cargo.toml
crates/ferrodruid-router/: Cargo.toml
crates/ferrodruid-rpc/: Cargo.toml
crates/ferrodruid-search/: Cargo.toml
crates/ferrodruid-segment/: Cargo.toml
crates/ferrodruid-sketches/: Cargo.toml
crates/ferrodruid-sql/: Cargo.toml
crates/ferrodruid-telemetry/: Cargo.toml
crates/ferrodruid-tiered/: Cargo.toml
crates/ferrodruid-ui/: Cargo.toml
docs/: compatibility-matrix.md  known-limitations.md  logcompat.md  superset-compatibility.md
docs/design/: compatibility-modes.md
licenses/: Apache-2.0.txt
tests/druid-compat/: Dockerfile.druid  Dockerfile.druid.template  README.md  docker-compose.druid27.yml  docker-compose.druid30-legacynull.yml  docker-compose.druid31.yml  docker-compose.druid32.yml  docker-compose.druid33.yml  docker-compose.druid34.yml  docker-compose.druid35.yml  docker-compose.druid36.yml  run_compat.sh  (+8 more)
(+317 files in other folders)
