# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)

[package]
name = "ferrodruid-historical-bin"
version = "1.5.1"
edition = "2024"
license = "BUSL-1.1"
description = "FerroDruid v1.0 historical-role launcher (Wave 40.LL — broker→historical + coordinator→historical wire)."

[[bin]]
name = "ferrodruid-historical"
path = "src/main.rs"

[dependencies]
ferrodruid-common = { path = "../../crates/ferrodruid-common" }
ferrodruid-deep-storage = { path = "../../crates/ferrodruid-deep-storage" }
ferrodruid-role = { path = "../../crates/ferrodruid-role" }
ferrodruid-rpc = { path = "../../crates/ferrodruid-rpc" }
anyhow.workspace = true
axum.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
