# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)

[package]
name = "ferrodruid-middlemanager-bin"
version = "1.3.0"
edition = "2024"
license = "BUSL-1.1"
description = "FerroDruid v1.0 middleManager-role launcher (Wave 38.FF scaffold)."

[[bin]]
name = "ferrodruid-middlemanager"
path = "src/main.rs"

[dependencies]
ferrodruid-role = { path = "../../crates/ferrodruid-role" }
ferrodruid-rpc = { path = "../../crates/ferrodruid-rpc" }
anyhow.workspace = true
axum.workspace = true
clap = { version = "4", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
