# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)
[package]
name = "ferrodruid-broker"
version = "1.5.0"
edition = "2024"
license = "BUSL-1.1"
description = "Query routing, scatter/gather merge for FerroDruid"

[dependencies]
ferrodruid-common = { path = "../ferrodruid-common" }
ferrodruid-query = { path = "../ferrodruid-query" }
ferrodruid-historical = { path = "../ferrodruid-historical" }
ferrodruid-aggregator = { path = "../ferrodruid-aggregator" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
ferrodruid-segment = { path = "../ferrodruid-segment" }
ferrodruid-bitmap = { path = "../ferrodruid-bitmap" }
ferrodruid-dict = { path = "../ferrodruid-dict" }
chrono.workspace = true
tempfile.workspace = true
