# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)
[package]
name = "ferrodruid-cli-lib"
version = "1.5.0"
edition = "2024"
license = "BUSL-1.1"
description = "CLI library for FerroDruid admin operations."

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
