# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)
[package]
name = "ferrodruid-common"
version = "1.3.0"
edition = "2024"
license = "BUSL-1.1"
description = "Shared types, errors, and configuration for FerroDruid."

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
proptest = "1.4"
