# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)

[package]
name = "ferrodruid-compat-check"
version = "1.3.0"
edition = "2024"
license = "BUSL-1.1"
description = "Self-serve Druid-SQL compatibility checker: points at a running FerroDruid endpoint and verifies known-correct Apache Druid behavior without needing a Druid cluster."

[[bin]]
name = "ferro-compat-check"
path = "src/main.rs"

[dependencies]
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
