# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)
[package]
name = "ferrodruid-compression"
version = "1.4.0"
edition = "2024"
license = "BUSL-1.1"
description = "Compression codecs for Druid segment data (LZ4, LZF, Zstd)."

[dependencies]
lz4_flex.workspace = true
zstd.workspace = true
bytes.workspace = true
thiserror.workspace = true
ferrodruid-common = { path = "../ferrodruid-common" }
