# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)
[package]
name = "ferrodruid-dict"
version = "1.5.1"
edition = "2024"
license = "BUSL-1.1"
description = "Front-coded dictionary encoding for Druid string columns."

[dependencies]
bytes.workspace = true
byteorder.workspace = true
thiserror.workspace = true
ferrodruid-common = { path = "../ferrodruid-common" }
