# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)
[package]
name = "ferrodruid-discovery"
version = "1.5.1"
edition = "2024"
license = "BUSL-1.1"
description = "Service discovery via openraft and gossip for FerroDruid"

[dependencies]
ferrodruid-common = { path = "../ferrodruid-common" }
ferrodruid-cluster = { path = "../ferrodruid-cluster" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
