# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)
[package]
name = "ferrodruid-events"
version = "1.4.0"
edition = "2024"
license = "BUSL-1.1"
description = "Audit log and event listener for FerroDruid."

[dependencies]
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
