# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)
[package]
name = "ferrodruid-historical"
version = "1.5.1"
edition = "2024"
license = "BUSL-1.1"
description = "Segment serving, mmap, and query execution for FerroDruid"

[dependencies]
ferrodruid-common = { path = "../ferrodruid-common" }
ferrodruid-segment = { path = "../ferrodruid-segment" }
ferrodruid-query = { path = "../ferrodruid-query" }
ferrodruid-aggregator = { path = "../ferrodruid-aggregator" }
ferrodruid-bitmap = { path = "../ferrodruid-bitmap" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
bytes.workspace = true
fs4.workspace = true

[dev-dependencies]
ferrodruid-dict = { path = "../ferrodruid-dict" }
serde_json.workspace = true
chrono.workspace = true
tempfile.workspace = true
