# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)
[package]
name = "ferrodruid-import-export"
version = "1.3.0"
edition = "2024"
license = "BUSL-1.1"
description = "Druid metadata import and segment migration for FerroDruid."

[dependencies]
ferrodruid-common = { path = "../ferrodruid-common" }
ferrodruid-metadata = { path = "../ferrodruid-metadata" }
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
