# SPDX-License-Identifier: BUSL-1.1
# Copyright 2026 abyo software 合同会社 (abyo software LLC)
[package]
name = "ferrodruid-ingest-batch"
version = "1.5.1"
edition = "2024"
license = "BUSL-1.1"
description = "Native batch ingestion for FerroDruid."

[dependencies]
ferrodruid-common = { path = "../ferrodruid-common" }
ferrodruid-segment = { path = "../ferrodruid-segment" }
ferrodruid-bitmap = { path = "../ferrodruid-bitmap" }
ferrodruid-dict = { path = "../ferrodruid-dict" }
ferrodruid-deep-storage = { path = "../ferrodruid-deep-storage" }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
# Parquet input format. arrow is the in-memory model; pinned to the
# workspace `arrow = "55"` so parquet stays in lockstep (same arrow-rs release).
arrow = { workspace = true }
parquet = "55"
bytes.workspace = true
# Avro Object Container File / stream input format.
apache-avro = "0.21"
# Bounded decompression of `deflate`-coded Avro OCF data blocks during
# prevalidation. apache-avro's default features compile only the `null` and
# `deflate` codecs, so deflate is the only codec we must inflate ourselves; the
# pure-Rust backend (miniz_oxide) avoids any C dependency.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
tempfile.workspace = true
# Null-faithful ingestion verification: drive the real scan / aggregator
# read path against freshly built segments (tests/null_faithful.rs).
ferrodruid-query = { path = "../ferrodruid-query" }
ferrodruid-aggregator = { path = "../ferrodruid-aggregator" }
